hphp/test/zend/good/ext/simplexml/tests/bug38347.php.expectf
SimpleXMLElement Object
(
)

Fatal error: Uncaught exception 'InvalidForeachArgumentException' with message 'Invalid argument supplied for foreach()' in %s/bug38347.php:6
Stack trace:
%A
